tests/valid/definite/ListSublist_Valid_2.whiley
void System::main([string] args):
    list = [1,2,3]
    sublist = list[0:2]
    print str(list)
    print str(sublist)
