tests/invalid/simple/ListSublist_CompileFail_1.whiley
void System::main([string] args):
    [int] list = [1,2,3]
    [int] sublist = list[-1:2]
    print str(list)
    print str(sublist)
